--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
+    "dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c \"astro dev\"",
+    "build": "tinacms build && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.5",
-    "@astrojs/tailwind": "^5.1.0",
     "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^5.2.5",
+    "date-fns": "^3.3.1",
     "tailwindcss": "^3.4.1",
-    "date-fns": "^3.3.1"
+    "tinacms": "^3.1.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "@tinacms/cli": "^2.0.6",
+    "@types/node": "^25.0.3"
   }
 }
